--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@layer base {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
 html,
 body,
 div,
@@ -87,6 +97,7 @@ video {
   padding: 0;
   font-size: 100%;
   vertical-align: baseline;
+  font-family: 'Inter', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
